Fixed spacings

--- a/src/sass/components/_work-skills.sass
+++ b/src/sass/components/_work-skills.sass
@@ -1,6 +1,8 @@
 #work-skills
     p
         margin-top: 0
+    ul
+        margin: 0
     li
         font-size: 0.875em
         padding: 0.25em 0.5em
